# PaperWise

./: .env.example  .gitignore  LICENSE  README.md  prompt.md  pyproject.toml
docs/: RICH_PROGRESS_PLAN.md
src/papersummarizer/: __init__.py  cli.py  config.py  exceptions.py  io_utils.py  mineru_client.py  mineru_parser.py  models.py  openai_summarizer.py  pipeline.py  progress.py  prompts.py  summary_evidence_enricher.py
tests/: test_config.py  test_io_utils.py  test_mineru_client.py  test_mineru_parser.py  test_openai_summarizer.py  test_pipeline.py  test_prompts.py  test_summary_evidence_enricher.py
