[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "paperwise"
version = "0.1.0"
description = "Intelligent paper parsing and summarization with layered analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PaperWise Contributors" }
]
keywords = ["paper", "pdf", "summarization", "llm", "research", "mineru"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "openai>=1.30.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "tqdm>=4.66.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
paperwise = "papersummarizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/papersummarizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
